Fix 8 code scanning security issues
- Fix type confusion vulnerability by sanitizing req.params.fileId (critical)
- Add rate limiting to WOPI endpoints with express-rate-limit (high)
- Fix clear-text logging by redacting JWT secret in logs (high)
- Fix tainted format string in app.js by using string concatenation (high)
- Add restrictive top-level permissions to docker-build.yml (medium)
- Add restrictive top-level permissions to docker-build-scheduled.yml (medium)

--- a/.github/workflows/docker-build-scheduled.yml
+++ b/.github/workflows/docker-build-scheduled.yml
@@ -7,6 +7,10 @@ on:
     - cron: '0 2 * * 0'
   workflow_dispatch:
 
+# Restrict default permissions for security
+permissions:
+  contents: read
+
 env:
   REGISTRY: docker.io
   IMAGE_PREFIX: ${{ vars.DOCKERHUB_USERNAME || 'teamsync' }}
@@ -15,6 +19,9 @@ jobs:
   build:
     runs-on: ubuntu-latest
     timeout-minutes: 360
+    permissions:
+      contents: read
+      packages: write
     strategy:
       fail-fast: false
       matrix:
