--- a/sample-app/package.json
+++ b/sample-app/package.json
@@ -23,6 +23,7 @@
     "docx": "^9.5.1",
     "exceljs": "^4.4.0",
     "express": "^4.18.2",
+    "express-rate-limit": "^7.5.0",
     "http-proxy-middleware": "^2.0.6",
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2",
